responsive overflow issue in progress

--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -148,14 +148,6 @@ and (max-device-width: 800px) {
 @media only screen
 and (min-device-width: 320px)
 and (max-device-width: 480px) {
-    .container {
-        /*padding: inherit;*/
-        /*margin: inherit;*/
-    }
-    body {
-
-    }
-
     body.modal-open .footer,
     .footer {
         width: inherit;
